--- a/manifest.json
+++ b/manifest.json
@@ -7,12 +7,13 @@
 
     "content_scripts": [
       {
-        "matches": ["*://*.news.ycombinator.com/*"],
+          "matches": ["*://*.news.ycombinator.com/",
+                      "*://*.news.ycombinator.com/news*"],
         "js": ["main.js"]
       }
     ],
 
     "permissions": [
-        "http://localhost:3000/"
+        "https://4hou.se"
     ]
 }
